; ModuleID = '/home/carl/AnghaBench/openssl/crypto/pkcs7/extr_pk7_lib.c_PKCS7_add_recipient.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/pkcs7/extr_pk7_lib.c_PKCS7_add_recipient.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @PKCS7_add_recipient(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = call i32* (...) @PKCS7_RECIP_INFO_new()
  store i32* %7, i32** %6, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  br label %24

10:                                               ; preds = %2
  %11 = load i32*, i32** %6, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @PKCS7_RECIP_INFO_set(i32* %11, i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %10
  br label %24

16:                                               ; preds = %10
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @PKCS7_add_recipient_info(i32* %17, i32* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %16
  br label %24

22:                                               ; preds = %16
  %23 = load i32*, i32** %6, align 8
  store i32* %23, i32** %3, align 8
  br label %27

24:                                               ; preds = %21, %15, %9
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @PKCS7_RECIP_INFO_free(i32* %25)
  store i32* null, i32** %3, align 8
  br label %27

27:                                               ; preds = %24, %22
  %28 = load i32*, i32** %3, align 8
  ret i32* %28
}

declare dso_local i32* @PKCS7_RECIP_INFO_new(...) #1

declare dso_local i32 @PKCS7_RECIP_INFO_set(i32*, i32*) #1

declare dso_local i32 @PKCS7_add_recipient_info(i32*, i32*) #1

declare dso_local i32 @PKCS7_RECIP_INFO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
